refactor(groovy): migrate things to Java (#5703)
* refactor(groovy): migrate clouddriver-core config to Java

* refactor(groovy): converting more low-hanging fruit

* refactor(groovy): fix a return

* refactor(groovy): public interfaces

* refactor(groovy): migrate clouddriver-core config to Java